<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/beach_min" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/arbutus"
                android:gravity="center_horizontal"
                android:text="@string/teamA"
                android:textColor="#616161"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="14sp"
                android:textColor="#6300EE"
                android:fontFamily="@font/arbutus"
                android:text="@string/set_count"/>

            <TextView
                android:id="@+id/set_count_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="56sp"
                android:textColor="#6300EE"
                android:fontFamily="@font/arbutus"
                android:text="0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="14sp"
                android:textColor="#000000"
                android:fontFamily="@font/arbutus"
                android:text="@string/score"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="56sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:id="@+id/team_a_score"
                android:text="0"/>

            <Button
                android:layout_width="match_parent"
                android:textAllCaps="true"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:onClick="addPointToTeamA"
                android:fontFamily="@font/arbutus"
                android:text="@string/point_button"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#E53935"
                android:fontFamily="@font/arbutus"
                android:onClick="addPointToTeamB"
                android:text="@string/foul_button"/>

        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="#6300EE"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/arbutus"
                android:gravity="center_horizontal"
                android:text="@string/teamB"
                android:textColor="#616161"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arbutus"
                android:gravity="center_horizontal"
                android:text="@string/set_count"
                android:textColor="#6300EE"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/set_count_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0"
                android:fontFamily="@font/arbutus"
                android:textColor="#6300EE"
                android:textSize="56sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arbutus"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="0"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:onClick="addPointToTeamB"
                android:fontFamily="@font/arbutus"
                android:text="@string/point_button"
                android:textAllCaps="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#E53935"
                android:fontFamily="@font/arbutus"
                android:onClick="addPointToTeamA"
                android:text="@string/foul_button"
                android:textAllCaps="true" />

        </LinearLayout>



    </LinearLayout>

    <Button
        android:fontFamily="@font/arbutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_button"
        android:textAllCaps="true"
        android:onClick="reset"/>

</RelativeLayout>
